--- a/styles.css
+++ b/styles.css
@@ -569,7 +569,7 @@ footer a:hover {
 #galleryCarousel .carousel-item img.img-centered {
   object-position: center center;
   object-fit: contain;
-  background-color: #1a1a2e;
+  background-color: #ffffff;
 }
 
 #galleryCarousel .carousel-item.active img {
@@ -1304,6 +1304,7 @@ footer a:hover {
     height: 28px;
   }
 }
+
 
 
 
